--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
     "files.associations": {
         "stdio.h": "c",
         "math.h": "c"
-    }
+    },
+    "cSpell.words": [
+        "kukuend",
+        "tensu"
+    ]
 }
