2025年04月09日授業分

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
         "bunpu",
         "intary",
         "kukuend",
+        "lrotate",
         "rcpy",
+        "rrotate",
         "tensu"
     ]
 }
