2025年04月23日授業分

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,11 +5,14 @@
     },
     "cSpell.words": [
         "bunpu",
+        "chnum",
         "intary",
         "kukuend",
         "lrotate",
         "rcpy",
         "rrotate",
+        "stringn",
+        "stringr",
         "tensu"
     ]
 }
