2025年04月29日授業分

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,11 +6,13 @@
     "cSpell.words": [
         "bunpu",
         "chnum",
+        "DOHC",
         "intary",
         "kukuend",
         "lrotate",
         "rcpy",
         "rrotate",
+        "strary",
         "stringn",
         "stringr",
         "tensu"
