2025年05月12日授業分

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,10 @@
         "intary",
         "kukuend",
         "lrotate",
+        "mnopqrstuvwxyz",
+        "mystrcpy",
+        "mystrncpy",
+        "OPQRSTUVW",
         "rcpy",
         "rrotate",
         "strary",
